# hand-gesture-recognition

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  camera_detection.cpp  image_representation_fourier_descriptors.cpp  knn_camera_prediction.cpp  knn_image_prediction.cpp  preprocess_dataset.cpp
src/: CMakeLists.txt  contour.cpp  contour.hpp  dataset_imgs.cpp  dataset_imgs.hpp  definition.hpp  fourier_descriptors.cpp  fourier_descriptors.hpp  gesture.hpp  knn.cpp  knn.hpp  outline.cpp  outline.hpp  tools.cpp  tools.hpp
